tests/ui/nebula_derive_rls_rbac_without_claim.stderr
error: Nebula RBAC RLS requires at least one role, permission, or scope
 --> tests/ui/nebula_derive_rls_rbac_without_claim.rs:4:8
  |
4 | struct Task {
  |        ^^^^
